--- a/app/assets/stylesheets/app.sass
+++ b/app/assets/stylesheets/app.sass
@@ -43,15 +43,14 @@ body
   font-weight: bold
   height: 40px
 .subtitle
-  font-size: 19px
+  font-size: 17px
+  margin-bottom: 10px
+.subsub
+  font-size: 14px
+  margin-bottom: 10px
 
 .semmargem
   margin: 0px
-
-.contato
-  float: right
-  margin-right: 30px 
-  margin-top: 2px
 
 .login
   margin-left: 34%
@@ -65,6 +64,9 @@ body
 p.info
   font-size: 12px
   text-align: center
+
+.center
+  text-align: center    
 
 .avatar
   float: left  
@@ -112,9 +114,26 @@ footer
     color: gray
     font-size: 11px
     margin-bottom: 5px
-    float: left
+    float: right
+    margin-right: 20px
+    margin-top: 1px
+
+.inea
+  float: left
+  margin-top: 1px
+  color: gray
+
+.contato
+  position: absolute
+  top: 395px
+  margin-left: 44px
+  font-size: 12px
 
 .realizacao
   float: right
   padding-bottom: 20px
   padding-top: 20px
+
+#grande
+  font-size: 16px
+  line-height: 30px  
