--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -36,3 +36,11 @@ textarea {
 	width: 340px;
 	height: 175px;
 }
+
+.carousel-indicators li {
+	background-color: lightgray;
+}
+
+.carousel-indicators .active {
+	background-color: gray;
+}
