--- a/app/views/pages/_logos.haml
+++ b/app/views/pages/_logos.haml
@@ -1,8 +1,9 @@
 .realizacao
   %div{:style => "text-align:center; width:750px; margin-left:auto; margin-right:auto;"}
-    %img#Image-Maps_6201304160748187{:alt => "", :border => "0", :height => "72", :src => "/assets/logos.png", :usemap => "#Image-Maps_6201304160748187", :width => "750"}/
-    %map#_Image-Maps_6201304160748187{:name => "Image-Maps_6201304160748187"}
-      %area{:alt => "", :coords => "3,10,120,67", :href => "http://www.rj.gov.br/web/sea", :shape => "rect", :title => ""}/
-      %area{:alt => "", :coords => "207,10,343,67", :href => "http://www.inea.rj.gov.br/", :shape => "rect", :title => ""}/
-      %area{:alt => "", :coords => "415,10,504,67", :href => "http://www.rj.gov.br/web/sea/exibeConteudo?article-id=163728", :shape => "rect", :title => ""}/
-      %area{:alt => "", :coords => "597,10,745,67", :href => "http://www.rj.gov.br/", :shape => "rect", :title => ""}/
+    %img#Image-Maps{:alt => "", :border => "0", :height => "72", :src => "/assets/logos.png", :usemap => "#Image-Maps", :width => "750"}/
+  %map#_Image-Maps{:name => "Image-Maps"}
+    %area{:alt => "", :coords => "10,16,150,67", :href => "http://www.rj.gov.br/", :shape => "rect", :title => ""}/
+    %area{:alt => "", :coords => "191,16,331,67", :href => "http://www.inea.rj.gov.br/index/index.asp", :shape => "rect", :title => ""}/
+    %area{:alt => "", :coords => "357,14,469,65", :href => "http://www.rj.gov.br/web/sea", :shape => "rect", :title => ""}/
+    %area{:alt => "", :coords => "506,16,589,67", :href => "http://www.rj.gov.br/web/sea/exibeConteudo?article-id=163728", :shape => "rect", :title => ""}/
+    %area{:alt => "", :coords => "636,5,732,67", :href => "http://www.unesco.org/new/pt/brasilia/2013-international-year-of-water-cooperation/", :shape => "rect", :title => ""}/      
