--- a/app/views/coletas/_admin.html.haml
+++ b/app/views/coletas/_admin.html.haml
@@ -12,12 +12,11 @@
         %tr
           %td= link_to coleta.local, coleta_path(coleta)
           %td= coleta.pessoa.nome
-          %td= "#{coleta.escola.nome} - #{coleta.escola.municipio}"
+          %td= "#{coleta.escola.nome} - #{coleta.escola.cidade.nome}"
           %td= format_datetime coleta.hora_coleta
-          %td
-            %a{:href=>edit_coleta_path(coleta), :class => 'btn btn-mini btn-primary'} 
+          %td{:style=>"width:85px"}
+            %a{:href=>edit_coleta_path(coleta), :class => 'btn btn-primary'} 
               %i.icon-edit
-              Editar
 
             = link_to '<i class="icon-trash"></i>'.html_safe, coleta_path(coleta), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Quer mesmo excluir a Coleta e todos seus dados?')) }, :class => 'btn btn-danger'
 
