--- a/app/views/escolas/_admin.html.haml
+++ b/app/views/escolas/_admin.html.haml
@@ -10,12 +10,11 @@
       - @escolas.each do |escola|
         %tr
           %td= link_to escola.nome, escola_path(escola)
-          %td= escola.municipio
+          %td= escola.cidade.nome
           %td= format escola.created_at
-          %td
-            %a{:href=>edit_escola_path(escola), :class => 'btn btn-mini btn-primary'} 
+          %td{:style=>"width:85px"}
+            %a{:href=>edit_escola_path(escola), :class => 'btn btn-primary'} 
               %i.icon-edit
-              Editar
 
             = link_to '<i class="icon-trash"></i>'.html_safe, escola_path(escola), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Quer mesmo excluir a Escola e todos seus dados?')) }, :class => 'btn btn-danger'
 
