--- a/app/views/noticia/_admin.html.haml
+++ b/app/views/noticia/_admin.html.haml
@@ -2,19 +2,17 @@
   %table.table.table-striped
     %thead
       %tr
-        %th
-        %th Título
         %th Data
+        %th Título
         %th
     %tbody
       - @noticia.each do |p|
         %tr
-          %td= link_to p.title, p        
-          %td= format p.created_at          
-          %td
-            %a{:href=>edit_noticium_path(p), :class => 'btn btn-mini btn-primary'} 
+          %td{:style=>"width: 70px"}= format p.created_at
+          %td= link_to p.titulo, p
+          %td{:style=>"width:85px"}
+            %a{:href=>edit_noticium_path(p), :class => 'btn btn-primary'} 
               %i.icon-edit
-              Editar
 
             = link_to '<i class="icon-trash"></i>'.html_safe, noticium_path(p), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Quer mesmo excluir a Notícia e todos seus dados?')) }, :class => 'btn btn-danger'
     %br
