--- a/app/views/pessoas/_admin.html.haml
+++ b/app/views/pessoas/_admin.html.haml
@@ -13,13 +13,12 @@
         %tr
           %td= link_to m.nome, m
           %td= m.email          
-          %td= m.escola ? "#{m.escola.nome} #{m.escola.municipio}" : '-'
+          %td= m.escola ? "#{m.escola.nome} #{m.escola.cidade.nome}" : '-'
           %td= m.senha
           %td= format m.created_at          
-          %td
-            %a{:href=>edit_pessoa_path(m), :class => 'btn btn-mini btn-primary'} 
+          %td{:style=>"width:85px"}
+            %a{:href=>edit_pessoa_path(m), :class => 'btn btn-primary'} 
               %i.icon-edit
-              Editar
 
             = link_to '<i class="icon-trash"></i>'.html_safe, pessoa_path(m), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Quer mesmo excluir a Pessoa e todos seus dados?')) }, :class => 'btn btn-danger'
     %br
