--- a/app/assets/stylesheets/app.sass
+++ b/app/assets/stylesheets/app.sass
@@ -72,6 +72,12 @@ p.info
   float: left  
   margin: 15px  
 
+#noticia  
+  margin: 0px auto
+  line-height: 16px
+  width: 600px
+  text-align: justify
+
 #search-submit
   position: absolute
   top: 8px
