--- a/app/views/admin/sobre.haml
+++ b/app/views/admin/sobre.haml
@@ -26,5 +26,5 @@
 
 :javascript
   $(document).ready(function(){
-    $('#sobre_texto').wysihtml5({"image": false});
+    $('#sobre_texto').wysihtml5({locale: "pt-BR", "image": false, "font-styles": false });
   });    
