--- a/app/views/noticia/_form.html.haml
+++ b/app/views/noticia/_form.html.haml
@@ -27,5 +27,5 @@
 
 :javascript
   $(document).ready(function(){
-    $('#noticium_texto').wysihtml5({"image": false});
+    $('#noticium_texto').wysihtml5({locale: "pt-BR", "image": false, "font-styles": false});
   }); 
