--- a/app/views/noticia/show.html.haml
+++ b/app/views/noticia/show.html.haml
@@ -6,4 +6,5 @@
 	= format @noticium.created_at
 %p.center
 	= image_tag @noticium.imagem :thumb if @noticium.imagem.path
-= @noticium.texto.html_safe
+#noticia
+	= @noticium.texto.html_safe
