--- a/app/views/pessoas/_admin.html.haml
+++ b/app/views/pessoas/_admin.html.haml
@@ -3,8 +3,8 @@
     %thead
       %tr
         %th Nome
-        %th Email        
-        %th Escola
+        %th Email
+        %th Escolas
         %th Senha
         %th Desde
         %th
@@ -12,10 +12,10 @@
       - @monitores.each do |m|
         %tr
           %td= link_to m.nome, m
-          %td= m.email          
-          %td= m.escola ? "#{m.escola.nome} #{m.escola.cidade.nome}" : '-'
+          %td= m.email
+          %td= m.escolas.map{|e| e.nome}.join(', ')
           %td= m.senha
-          %td= format m.created_at          
+          %td= format m.created_at
           %td{:style=>"width:85px"}
             %a{:href=>edit_pessoa_path(m), :class => 'btn btn-primary'} 
               %i.icon-edit
