--- a/app/views/pessoas/_form.html.haml
+++ b/app/views/pessoas/_form.html.haml
@@ -22,9 +22,9 @@
       = f.text_field :email, :class => 'text_field'
   
   .control-group
-    = f.label :escola_id, :class => 'control-label'
+    = f.label :escolas, :class => 'control-label'
     .controls
-      = f.select(:escola_id, Escola.all.collect {|p| [ p.nome, p.id ] }, {:include_blank => 'Selecione...'})
+      = f.select(:escola_ids, Escola.all.collect {|p| [ "#{p.nome} - #{p.cidade.nome}", p.id ] }, {}, :multiple => true, :class=>"chosen", :style=>"width:450px")
   
   .form-actions
     = f.submit "Salvar", :class => 'btn btn-primary'
