novo estilo em página de sobre

--- a/app/assets/stylesheets/app.sass
+++ b/app/assets/stylesheets/app.sass
@@ -74,8 +74,13 @@ p.info
 
 #noticia  
   margin: 0px auto
-  line-height: 16px
+  line-height: 17px
   width: 600px
+  text-align: justify
+
+#sobre
+  margin: 0px auto
+  line-height: 17px
   text-align: justify
 
 #search-submit
