--- a/app/views/pages/sobre.haml
+++ b/app/views/pages/sobre.haml
@@ -1,3 +1,3 @@
-#div= @sobre.texto.html_safe
+#sobre= @sobre.texto.html_safe
 = image_tag @sobre.parceiros :thumb if @sobre.parceiros.path
 = image_tag @sobre.execucao :thumb if @sobre.execucao.path
