--- a/app/views/coletas/_form.html.haml
+++ b/app/views/coletas/_form.html.haml
@@ -5,6 +5,7 @@
       %li= msg
 
 - if !@coleta.id && !current_user.is_monitor
+
   .alert.alert-error
     %button.close{"data-dismiss" => "alert", :type => "button"} ×
     %li Somente Monitores de Escolas podem criar Coletas.
@@ -172,6 +173,14 @@
           = f.number_field :detergentes, :step=>'0.1', :class => 'number_field'     
           %span.add-on mg/L LAS
 
+    %hr
+
+    .control-group
+      = f.label :escola, :class => 'control-label'
+      .controls
+        - selected = @coleta.id && @coleta.escola ? @coleta.escola.id : ""        
+        = f.select(:escola_id, @escolas,{:include_blank => 'Escolha', :selected => selected})     
+
     .control-group
       = f.label :responsavel, :class => 'control-label'
       .controls
@@ -189,5 +198,4 @@
 
     .form-actions
       = f.hidden_field :pessoa_id, :value => @coleta.id ? @coleta.pessoa.id : current_user.id
-      = f.hidden_field :escola_id, :value =>  @coleta.id ? @coleta.escola.id : current_user.escola.id
       = f.submit "Salvar", :class => 'btn btn-primary'
