--- a/app/assets/stylesheets/app.sass
+++ b/app/assets/stylesheets/app.sass
@@ -38,6 +38,10 @@ body
   width: 755  
   margin-left: 150px
 
+#mapa
+  width: 755px
+  height: 600px  
+
 .title
   font-size: 26px
   font-weight: bold
