carrega script do mapa somente após carregament do mapa

--- a/app/views/pages/mapa.haml
+++ b/app/views/pages/mapa.haml
@@ -1,4 +1,4 @@
 - content_for :javascripts do
-	= javascript_include_tag "mapa", "http://maps.googleapis.com/maps/api/js?key=AIzaSyBwG0qBPx1M89Waoit_jg8TbJL2wcvQKts&sensor=false"
-
+	= javascript_include_tag "http://maps.googleapis.com/maps/api/js?key=AIzaSyBwG0qBPx1M89Waoit_jg8TbJL2wcvQKts&sensor=false", "mapa"
+	
 #mapa
