--- a/app/views/coletas/show.html.haml
+++ b/app/views/coletas/show.html.haml
@@ -31,7 +31,7 @@
   %i.icon-time
   %span Coleta realizada
   %span
-    %b= format_datetime @coleta.hora_coleta    
+    %b= formata_dataehora @coleta.hora_coleta    
 
 %hr
 
