--- a/app/views/cidades/show.haml
+++ b/app/views/cidades/show.haml
@@ -17,7 +17,7 @@
 						- e.coletas.each do |c|
 							#div{:style=>"padding-left:20px"}
 								%i.icon-time
-								= format c.hora_coleta
+								= formata_data c.hora_coleta
 								%a{:href=>coleta_path(c)}= c.local
 					- else
 						#div{:style=>"padding-left:20px"}
