--- a/app/views/escolas/show.html.haml
+++ b/app/views/escolas/show.html.haml
@@ -19,7 +19,7 @@
 		- @escola.coletas.each do |c|
 			#div{:style=>"padding-left:20px"}
 				%i.icon-time
-				= format c.hora_coleta
+				= formata_data c.hora_coleta
 				%a{:href=>coleta_path(c)}= c.local
 	- else 
 		%i.icon-list 
