indicador de slides pra baixo

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -37,6 +37,10 @@ textarea {
 	height: 175px;
 }
 
+.carousel-indicators{
+	top: 41px
+}
+
 .carousel-indicators li {
 	background-color: lightgray;
 }
