melhor css para impressao

--- a/app/assets/stylesheets/app.sass
+++ b/app/assets/stylesheets/app.sass
@@ -1,5 +1,9 @@
 $fundo: #fbfbfb
 
+@media print
+  .no-print
+    display: none
+
 *
   margin: 0px
   padding: 0px
@@ -7,7 +11,7 @@ $fundo: #fbfbfb
 img
   margin: 0px
   padding: 0px
-  border: 0px
+  border: 0px  
 
 .titulo
   margin: 5px
