--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -10,15 +10,15 @@
     
     %body
       #meio      
-        .logo.no-print= image_tag "logo.png"
         .no-print
+          .logo= image_tag "logo.png"
           #fb-root
           .fb-like{"data-href" => "http://agendaaguanaescola.eco.br", "data-layout" => "box_count", "data-send" => "true", "data-show-faces" => "false", :style=>"position: absolute"}
         / .fb-like-box{"data-header" => "false", "data-href" => "https://www.facebook.com/pages/Programa-Agenda-Água/115330381949211", "data-show-border" => "false", "data-show-faces" => "true", "data-stream" => "false", "data-width" => "140", :style=>"position: absolute; float:left; top: 420"}
-        .contato.no-print
-          %i.icon-envelope
-            %a{:href=>"mailto:agenda.agua@gmail.com"}
-              contato
+          .contato
+            %i.icon-envelope
+              %a{:href=>"mailto:agenda.agua@gmail.com"}
+                contato
         #menu.no-print= render :partial => "pages/menu"       
         #todo= yield
         #menu.no-print= render :partial => "pages/logos"
