fix typos & .title size

--- a/app/views/coletas/_form.html.haml
+++ b/app/views/coletas/_form.html.haml
@@ -64,7 +64,7 @@
         = f.text_field :condicoes_climaticas, :class => 'text_field'
 
     .control-group
-      = f.label "Classe Coname", :class => 'control-label'
+      = f.label "Classe Conama", :class => 'control-label'
       .controls
         = f.text_field :classe_coname, :class => 'text_field'      
 
