fix (again) new facebook like button

--- a/app/assets/stylesheets/app.sass
+++ b/app/assets/stylesheets/app.sass
@@ -29,7 +29,7 @@ body
   margin-left: 22px
   position: absolute
 
-.fb_edge_widget_with_comment
+.fb-like
   margin-top: 280px
   margin-left: 33px
   position: absolute
